fixing transition on mobile

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -173,7 +173,13 @@ a {
 }
 
 @media all and (max-width: 65em) {
+	.cart-wrapper {
+		transition: all 0.5s;
+		-webkit-transition: all 0.5s;
+	}
 	.cart-wrapper-active {
+		transition: all 0.5s;
+		-webkit-transition: all 0.5s;
 		width: 55%;
 	}
 }
